resolved tregister and delete button onclick

--- a/react-tutorial-master/public/index.html
+++ b/react-tutorial-master/public/index.html
@@ -16,143 +16,147 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
-<body>
-  <div id="app"></div>
-  <script type="text/babel">
+<body class="container">
+<div id="app"></div>
+<script type="text/babel">
 
 
-    var RegistrationForm = React.createClass({
+  var RegistrationForm = React.createClass({
 
 
+    getInitialState: function () {
 
-      getInitialState: function () {
-
-        var details = localStorage.getItem('details') || 1;
-
-
-        return {
-          email: '', name: '', company: '', isSelected: false, noOfUsers: 0,
-          details: [],
-
-        };
-      },
-
-      setDetails: function( details ) {
-        localStorage.setItem( 'details', details );
-        this.setState( { details: details } );
-      },
-
-      storeName: function (event) {
-        this.setState({name: event.target.value});
-      },
-
-      storeEmail: function (event) {
-        this.setState({email: event.target.value});
-      },
-
-      storeCompany: function (event) {
-        this.setState({company: event.target.value});
-      },
-
-      delete: function () {
-        console.log("Button Clicked! Finallyyyyy");
-      },
-      registerMessage: function () {
-        console.log(this.state.name);
-        console.log(this.state.email);
-        console.log(this.state.company);
-
-        var detail = this.state;
-
-        this.state.details.push(detail);
-        this.setState({noOfUsers: this.state.noOfUsers + 1});
-        console.log("length" + this.state.details.length);
-
-        console.log(this.state.noOfUsers);
-        this.setState({isSelected: true});
-
-      },
+      var details = localStorage.getItem('details') || 1;
 
 
-      render: function () {
-        var isSelected = false;
+      return {
+        email: '', name: '', company: '', isSelected: false, noOfUsers: 0,
+        details: [],
 
-        return (
-          <div >
+      };
+    },
 
-            <div className="col-xs-9">
-              <form className="form-group">
+    setDetails: function (details) {
+      localStorage.setItem('details', details);
+      this.setState({details: details});
+    },
 
-              <div className="row">
-                <div className="col-xs-5  col-md-offset-2">
-                  <h2> Women Who Code </h2>
-                  <label >Name: </label>
-                  <input className="form-control" id="name" type="text" placeholder="Enter Name!"
-                         onBlur={this.storeName}/>
-                </div>
-              </div>
+    storeName: function (event) {
+      this.setState({name: event.target.value});
+    },
 
-              <div>
-                <div className="row">
+    storeEmail: function (event) {
+      this.setState({email: event.target.value});
+    },
 
-                  <div className="col-xs-5  col-md-offset-2">
-                    <label>EmailID: </label>
-                    <input className="form-control" type="text" id="email" placeholder="Enter EmailID"
-                           onBlur={this.storeEmail}/>
-                  </div>
-                </div>
-              </div>
+    storeCompany: function (event) {
+      this.setState({company: event.target.value});
+    },
 
-              <div className="row">
-                <div className="col-xs-5  col-md-offset-2">
-                  <label>Company/Institution: </label>
-                  <input className="form-control" type="text" id="company" placeholder=" Enter Company/Institution"
-                         onBlur={this.storeCompany}/>
-                </div>
-              </div>
+    delete: function () {
+      console.log("Button Clicked! Finallyyyyy");
+    },
+    registerMessage: function () {
+      console.log(this.state.name);
+      console.log(this.state.email);
+      console.log(this.state.company);
 
-              <div className="row">
-                <div className="col-xs-3 col-md-offset-4">
-                  <input className="btn btn-primary btn-space" onClick={this.registerMessage} type="button"
-                         value="Register"/>
-                </div>
-                <div className="col-xs-6 col-md-offset-2">
-                  {this.state.isSelected ? <h4>You have been successfully registered!</h4> : null}
-                </div>
-                <div className="col-xs-4 col-md-offset-9">
-                  Users registered: {this.state.noOfUsers}
-                </div>
-              </div>
-          </form>
+      this.state.self= this;
 
-          </div>
+      var detail = this.state;
 
-            <div className="col-xs-3 ">
-              <ul className="UserList">
-                {
-                  this.state.details.map(function (user) {
-                    return (
-                      <div id="userDelete"><li key={user.name}>{user.name}: {user.email} </li>
-                        <input type="button" id={user.name} className="btn btn-danger" value="Unregister" />
+      this.state.details.push(detail);
+      this.setState({noOfUsers: this.state.noOfUsers + 1});
+      console.log("length" + this.state.details.length);
+
+      console.log(this.state.noOfUsers);
+      this.setState({isSelected: true});
+
+    },
+
+
+    render: function () {
+      var isSelected = false;
+
+      return (
+        <div >
+          <div className="container container-table">
+            <div className="row vertical-center-row">
+              <div className="col-xs-9">
+                <form className="form-group">
+
+                  <div className="row">
+                    <div className="col-xs-5  col-md-offset-2">
+                      <h2> Women Who Code </h2>
+                      <label >Name: </label>
+                      <input className="form-control" id="name" type="text" placeholder="Enter Name!"
+                             onBlur={this.storeName}/>
                     </div>
-                    )
-                  })
-                }
-              </ul>
+                  </div>
+
+                  <div>
+                    <div className="row">
+
+                      <div className="col-xs-5  col-md-offset-2">
+                        <label>EmailID: </label>
+                        <input className="form-control" type="text" id="email" placeholder="Enter EmailID"
+                               onBlur={this.storeEmail}/>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div className="row">
+                    <div className="col-xs-5  col-md-offset-2">
+                      <label>Company/Institution: </label>
+                      <input className="form-control" type="text" id="company" placeholder=" Enter Company/Institution"
+                             onBlur={this.storeCompany}/>
+                    </div>
+                  </div>
+
+                  <div className="row">
+                    <div className="col-xs-3 col-md-offset-4">
+                      <input className="btn btn-primary btn-space" onClick={this.registerMessage} type="button"
+                             value="Register"/>
+                    </div>
+                    <div className="col-xs-6 col-md-offset-2">
+                      {this.state.isSelected ? <h4>You have been successfully registered!</h4> : null}
+                    </div>
+                    <div className="col-xs-4 col-md-offset-9">
+                      Users registered: {this.state.noOfUsers}
+                    </div>
+                  </div>
+                </form>
+
+              </div>
+
+              <div className="col-xs-3">
+                <ul className="UserList col-xs-5  col-md-offset-1">
+                  {
+                    this.state.details.map(function (user) {
+                      return (
+                        <div id="userDelete">
+                          <li key={user.name}>{user.name}: {user.email} </li>
+                          <input type="button" id={user.name} className="btn btn-danger" value="Unregister" onClick={user.self.delete}/>
+                        </div>
+                      )
+                    })
+                  }
+                </ul>
+              </div>
             </div>
-
           </div>
-        )
-      }
+        </div>
+      )
+    }
 
-    });
+  });
 
-    ReactDOM.render(
-      <RegistrationForm />,
-      document.getElementById('app')
-    );
+  ReactDOM.render(
+    <RegistrationForm />,
+    document.getElementById('app')
+  );
 
-  </script>
+</script>
 </body>
 </html>
 
@@ -160,8 +164,39 @@
   .btn-space {
     margin-top: 20px;
   }
+
   .userDelete {
     display: flex;
     flex-direction: row-reverse;
+  }
+
+  .UserList {
+    height: 200px;
+    overflow-y: scroll;
+  }
+
+  html, body, .container-table {
+    height: 100%;
+    color: #f8f8f8;
+  }
+
+  .vertical-center {
+    min-height: 100%;
+    min-height: 100vh;
+
+    display: flex;
+    align-items: center;
+  }
+  .container-table {
+    display: table;
+  }
+
+  .vertical-center-row {
+    display: table-cell;
+    vertical-align: middle;
+  }
+
+  .container {
+    background-image: url("./images.jpeg");
   }
 </style>
