--- a/react-tutorial-master/public/index.html
+++ b/react-tutorial-master/public/index.html
@@ -21,25 +21,32 @@
 <script type="text/babel">
 
 
+  var UsersItem = React.createClass({
+    done: function() {
+      this.props.done(this.props.user);
+    },
+
+    render: function() {
+      return (
+        <div>
+        <li onClick={this.done}>{this.props.user}</li>
+          <input type="button" className="btn btn-danger" value="Unregister" onClick={this.done}/>
+        </div>
+      )
+    }
+  });
+
   var RegistrationForm = React.createClass({
 
 
     getInitialState: function () {
-
-      var details = localStorage.getItem('details') || 1;
-
-
       return {
         email: '', name: '', company: '', isSelected: false, noOfUsers: 0,
-        details: [],
-
+        users: this.props.users
       };
+
     },
 
-    setDetails: function (details) {
-      localStorage.setItem('details', details);
-      this.setState({details: details});
-    },
 
     storeName: function (event) {
       this.setState({name: event.target.value});
@@ -56,22 +63,43 @@
     delete: function () {
       console.log("Button Clicked! Finallyyyyy");
     },
+
+    done: function(user) {
+      var users = this.props.users;
+      users.splice(users.indexOf(user), 1);
+      localStorage.setItem('users', JSON.stringify(users));
+      this.setState({ users: users });
+    },
+
+
     registerMessage: function () {
       console.log(this.state.name);
       console.log(this.state.email);
       console.log(this.state.company);
 
       this.state.self= this;
+      //ADD
 
-      var detail = this.state;
+      var users = this.props.users;
+      users.push(this.state.name);
 
-      this.state.details.push(detail);
+      localStorage.setItem('users', JSON.stringify(users));
+      this.setState({ users: users });
+
+
       this.setState({noOfUsers: this.state.noOfUsers + 1});
-      console.log("length" + this.state.details.length);
 
       console.log(this.state.noOfUsers);
       this.setState({isSelected: true});
 
+
+      localStorage.setItem(this.state.email,this.state.name);
+
+      for(var i=0, len=localStorage.length; i<len; i++) {
+        var key = localStorage.key(i);
+        var value = localStorage[key];
+        console.log(key + "---->" + value);
+      }
     },
 
 
@@ -122,27 +150,24 @@
                       {this.state.isSelected ? <h4>You have been successfully registered!</h4> : null}
                     </div>
                     <div className="col-xs-4 col-md-offset-9">
-                      Users registered: {this.state.noOfUsers}
+                      Users registered: {JSON.parse(localStorage.getItem("users")).length}
                     </div>
+                  </div>
+
+                  <div className="col-xs-3">
+                    <ul className="UserList col-xs-5  col-md-offset-1">
+                      {
+                        this.state.users.map(function(user) {
+                          return <UsersItem user={user} done={this.done} />
+                        }.bind(this))
+                      }
+                    </ul>
                   </div>
                 </form>
 
               </div>
 
-              <div className="col-xs-3">
-                <ul className="UserList col-xs-5  col-md-offset-1">
-                  {
-                    this.state.details.map(function (user) {
-                      return (
-                        <div id="userDelete">
-                          <li key={user.name}>{user.name}: {user.email} </li>
-                          <input type="button" id={user.name} className="btn btn-danger" value="Unregister" onClick={user.self.delete}/>
-                        </div>
-                      )
-                    })
-                  }
-                </ul>
-              </div>
+
             </div>
           </div>
         </div>
@@ -151,8 +176,10 @@
 
   });
 
+  var users = JSON.parse(localStorage.getItem('users')) || [];
+
   ReactDOM.render(
-    <RegistrationForm />,
+    <RegistrationForm  users = {users}/>,
     document.getElementById('app')
   );
 
