--- a/react-tutorial-master/public/index.html
+++ b/react-tutorial-master/public/index.html
@@ -22,6 +22,7 @@
 
 
   var UsersItem = React.createClass({
+
     done: function() {
       this.props.done(this.props.user);
     },
@@ -29,8 +30,10 @@
     render: function() {
       return (
         <div>
-        <li onClick={this.done}>{this.props.user}</li>
-          <input type="button" className="btn btn-danger" value="Unregister" onClick={this.done}/>
+        <li>Name:&nbsp;{this.props.user.name} </li>
+        <li>Email: &nbsp;{this.props.user.email} </li>
+          <input type="button" className="btn btn-danger pull-right" value="Unregister" onClick={this.done}/>
+          <br/><br/><br/>
         </div>
       )
     }
@@ -40,8 +43,9 @@
 
 
     getInitialState: function () {
+
       return {
-        email: '', name: '', company: '', isSelected: false, noOfUsers: 0,
+        email: '', name: '', company: '', isSelected: false,
         users: this.props.users
       };
 
@@ -49,7 +53,8 @@
 
 
     storeName: function (event) {
-      this.setState({name: event.target.value});
+      var value = event.target.value;
+        this.setState({name: value});
     },
 
     storeEmail: function (event) {
@@ -67,112 +72,91 @@
     done: function(user) {
       var users = this.props.users;
       users.splice(users.indexOf(user), 1);
-      localStorage.setItem('users', JSON.stringify(users));
       this.setState({ users: users });
+
+      localStorage.setItem('users', JSON.stringify(users));
     },
 
 
     registerMessage: function () {
-      console.log(this.state.name);
-      console.log(this.state.email);
-      console.log(this.state.company);
 
-      this.state.self= this;
       //ADD
-
       var users = this.props.users;
-      users.push(this.state.name);
+      users.push({name: this.state.name, email: this.state.email});
 
-      localStorage.setItem('users', JSON.stringify(users));
       this.setState({ users: users });
-
-
-      this.setState({noOfUsers: this.state.noOfUsers + 1});
-
-      console.log(this.state.noOfUsers);
       this.setState({isSelected: true});
 
+      localStorage.setItem('users', JSON.stringify(users));
 
-      localStorage.setItem(this.state.email,this.state.name);
 
-      for(var i=0, len=localStorage.length; i<len; i++) {
-        var key = localStorage.key(i);
-        var value = localStorage[key];
-        console.log(key + "---->" + value);
-      }
+      //Clear
+      this.refs.name.value = "";
+      this.refs.email.value = "";
+      this.refs.company.value = "";
+      this.setState({email : '', name : '', company: ''})
     },
 
+  render: function () {
+    return (
+      <div >
+        <div className="container container-table">
+          <div className="col-md-9">
+            <form className="form-group">
 
-    render: function () {
-      var isSelected = false;
-
-      return (
-        <div >
-          <div className="container container-table">
-            <div className="row vertical-center-row">
-              <div className="col-xs-9">
-                <form className="form-group">
-
-                  <div className="row">
-                    <div className="col-xs-5  col-md-offset-2">
-                      <h2> Women Who Code </h2>
-                      <label >Name: </label>
-                      <input className="form-control" id="name" type="text" placeholder="Enter Name!"
-                             onBlur={this.storeName}/>
-                    </div>
-                  </div>
-
-                  <div>
-                    <div className="row">
-
-                      <div className="col-xs-5  col-md-offset-2">
-                        <label>EmailID: </label>
-                        <input className="form-control" type="text" id="email" placeholder="Enter EmailID"
-                               onBlur={this.storeEmail}/>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div className="row">
-                    <div className="col-xs-5  col-md-offset-2">
-                      <label>Company/Institution: </label>
-                      <input className="form-control" type="text" id="company" placeholder=" Enter Company/Institution"
-                             onBlur={this.storeCompany}/>
-                    </div>
-                  </div>
-
-                  <div className="row">
-                    <div className="col-xs-3 col-md-offset-4">
-                      <input className="btn btn-primary btn-space" onClick={this.registerMessage} type="button"
-                             value="Register"/>
-                    </div>
-                    <div className="col-xs-6 col-md-offset-2">
-                      {this.state.isSelected ? <h4>You have been successfully registered!</h4> : null}
-                    </div>
-                    <div className="col-xs-4 col-md-offset-9">
-                      Users registered: {JSON.parse(localStorage.getItem("users")).length}
-                    </div>
-                  </div>
-
-                  <div className="col-xs-3">
-                    <ul className="UserList col-xs-5  col-md-offset-1">
-                      {
-                        this.state.users.map(function(user) {
-                          return <UsersItem user={user} done={this.done} />
-                        }.bind(this))
-                      }
-                    </ul>
-                  </div>
-                </form>
-
+              <div className="row">
+                <div className="col-md-5  col-md-offset-2">
+                  <h2> Women Who Code </h2>
+                  <label >Name: </label>
+                  <input className="form-control" id="name" ref="name" type="text" placeholder="Enter Name!"
+                         onBlur={this.storeName}/>
+                </div>
               </div>
 
+              <div className="row">
+                <div className="col-md-5  col-md-offset-2">
+                  <label>EmailID: </label>
+                  <input className="form-control" type="text" id="email" ref="email" placeholder="Enter EmailID"
+                         onBlur={this.storeEmail}/>
+                </div>
+              </div>
 
-            </div>
+              <div className="row">
+                <div className="col-md-5  col-md-offset-2">
+                  <label>Company/Institution: </label>
+                  <input className="form-control" type="text" id="company" ref="company" placeholder=" Enter Company/Institution"
+                         onBlur={this.storeCompany}/>
+                </div>
+              </div>
+
+              <div className="row">
+                <div className="col-md-3 col-md-offset-4">
+                  <input className="btn btn-primary btn-space" onClick={this.registerMessage} type="button"
+                         value="Register"/>
+                </div>
+                <div className="col-md-6 col-md-offset-2">
+                  {this.state.isSelected ? <h4>You have been successfully registered!</h4> : null}
+                </div>
+              </div>
+
+            </form>
+          </div>
+
+          <div className="col-md-3">
+            <ul className="UserList col-xs-5  col-md-offset-1">
+              {
+                this.state.users.map(function(user) {
+                  return <UsersItem user={user} done={this.done} />
+                }.bind(this))
+              }
+            </ul>
           </div>
         </div>
-      )
-    }
+      </div>
+    )
+
+    var isSelected = false;
+  }
 
   });
 
@@ -192,38 +176,32 @@
     margin-top: 20px;
   }
 
+  ul{
+    list-style-type: none;
+  }
   .userDelete {
     display: flex;
     flex-direction: row-reverse;
   }
-
   .UserList {
-    height: 200px;
+    border: solid white 2px;
+    height: 300px;
+    width: 380px;
     overflow-y: scroll;
   }
 
+  body {
+    background: url("./image.png") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+
   html, body, .container-table {
-    height: 100%;
-    color: #f8f8f8;
+    color: #f8f8f8 ;
   }
-
-  .vertical-center {
-    min-height: 100%;
-    min-height: 100vh;
-
-    display: flex;
-    align-items: center;
-  }
-  .container-table {
-    display: table;
-  }
-
-  .vertical-center-row {
-    display: table-cell;
-    vertical-align: middle;
-  }
-
   .container {
-    background-image: url("./images.jpeg");
+    margin-top: 100px;
   }
 </style>
